--- a/sites/Myfolio/src/scss/main.scss
+++ b/sites/Myfolio/src/scss/main.scss
@@ -40,6 +40,7 @@ h2 {
 
 section {
 	padding: 4.2rem 0;
+	overflow: hidden;
 }
 
 
@@ -90,7 +91,7 @@ section {
 	}
 }
 
-#about-us {}
+
 
 .title-page {
 	text-align: center;
